RESOLVED FIXED310984
URL: fix bug in SpecialRelativeOrAuthority state
https://bugs.webkit.org/show_bug.cgi?id=310984
Summary URL: fix bug in SpecialRelativeOrAuthority state
Anne van Kesteren
Reported 2026-03-28 08:28:14 PDT
.
Attachments
Anne van Kesteren
Comment 1 2026-03-28 08:33:34 PDT
EWS
Comment 2 2026-03-31 04:58:29 PDT
Committed 310300@main (d5b4478380e7): <https://commits.webkit.org/310300@main> Reviewed commits have been landed. Closing PR #61579 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2026-03-31 04:59:13 PDT
Note You need to log in before you can comment on or make changes to this bug.