Cherry-pick 310300@main (d5b4478380e7). https://bugs.webkit.org/show_bug.cgi?id=310984

URL: fix bug in SpecialRelativeOrAuthority state
    https://bugs.webkit.org/show_bug.cgi?id=310984

    Reviewed by Youenn Fablet.

    Reaching end-of-input in this state should not terminate the parser. We
    should continue in the RelativeSlash state.

    See

        https://url.spec.whatwg.org/#special-relative-or-authority-state

    for context.

    Upstream:

        https://github.com/web-platform-tests/wpt/pull/58839

    Canonical link: https://commits.webkit.org/310300@main

Canonical link: https://commits.webkit.org/305877.399@webkitglib/2.52